codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__backend_banners_tests__backend_banner_notification.snap
---
source: tui/src/chatwidget/tests/backend_banners_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 70))"
---
  Selected model usage exhausted
  Ask your owner for credits or switch to another model.
› 1. Notify owner

  Press a number to choose
──────────────────────────────────────────────────────────────────────
› Ask Codex to do anything
──────────────────────────────────────────────────────────────────────
  test-model-a default · /tmp/project
